# OS_C

./: README.md
OS_KOL_1/: README.md
OS_KOL_1/src/: main.cpp
OS_KOL_2/: README.md
OS_KOL_2/src/: main.cpp
OS_KOL_3/: README.md
OS_LAB_2/: CMakeLists.txt
OS_LAB_2/src/: logic.cpp  logic.h  main.cpp  main.h
OS_LAB_2/tests/: CMakeLists.txt  test_main.cpp
OS_LAB_4/: CMakeLists.txt
OS_LAB_4/Message/: Message.h
OS_LAB_4/Receiver/: CMakeLists.txt  main.cpp
OS_LAB_4/Sender/: CMakeLists.txt  main.cpp
OS_LAB_4/tests/: CmakeLists.txt  tests.cpp
OS_LAB_4_1/: CMakeLists.txt
OS_LAB_4_1/src/: CMakeLists.txt  receiver.cpp  ring_buffer.cpp  ring_buffer.hpp  sender.cpp
OS_LAB_4_1/test/: CMakeLists.txt  test_ring_buffer.cpp
OS_LAB_5/: CMakeLists.txt
OS_LAB_5/include/: employee.hpp
OS_LAB_5/src/: client.cpp  server.cpp
OS_LAB_5/tests/: CMakeLists.txt  test_employee.cpp
